--- a/Consolidated/Selection_worksheet.ipynb
+++ b/Consolidated/Selection_worksheet.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Selection worksheet.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,8 +20,15 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/futureCodersSE/python-fundamentals/blob/main/Consolidated/Selection_worksheet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Megan-Sen/python-fundamentals/blob/main/Consolidated/Selection_worksheet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "767NQCcbOLvn"
+      }
     },
     {
       "cell_type": "markdown",
@@ -216,13 +222,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BIhqeCOHpzOS"
+        "id": "BIhqeCOHpzOS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cb2a169c-9e7a-4372-d792-9cb312f05d0d"
       },
       "source": [
-        ""
+        "def find_greater():\n",
+        "    num1 = int(input(\"Enter number1\"))\n",
+        "    num2 = int(input(\"Enter number2\"))\n",
+        "    if num1 > num2 :\n",
+        "      print(num1)\n",
+        "    else:\n",
+        "      print(num2)\n",
+        "        \n",
+        "find_greater()\n",
+        "  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number15\n",
+            "Enter number21\n",
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -243,19 +272,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hmKpcdRv0UOd"
+        "id": "hmKpcdRv0UOd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "788307a4-d172-499c-a527-9f74f9bcb6da"
       },
       "source": [
         "from random import randint\n",
         "\n",
         "def guess_number(randomNumber):\n",
         "  # add your code below here\n",
-        "\n",
+        "    guess = int(input(\"Input guess number\"))\n",
+        "    if guess > randomNumber:\n",
+        "      print(\"Too high\")\n",
+        "    else:\n",
+        "      print(\"Too low\")\n",
         "\n",
         "guess_number(randint(1,100))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Input guess number5\n",
+            "Too low\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -292,13 +338,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FCVRtwjd2ZnH"
+        "id": "FCVRtwjd2ZnH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fca928c4-1d53-445b-bc64-b7745736215d"
       },
       "source": [
-        ""
+        "def  is_afternoon():\n",
+        "     time = int(input(\"Enter the time in 24 hour clock format (e.g. 1759)\"))\n",
+        "     hour = time // 100\n",
+        "     minutes = time % 100 \n",
+        "     if hour >= 12 :\n",
+        "      am_pm = \"PM\"\n",
+        "      hour -= 12\n",
+        "     else:\n",
+        "       am_pm = \"AM\"\n",
+        "     text_time = str(hour) + \":\" + str(minutes) + am_pm\n",
+        "     print(\"The time is\", text_time)\n",
+        "    \n",
+        "is_afternoon()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the time in 24 hour clock format (e.g. 1759)1243\n",
+            "The time is 0:43PM\n",
+            "43\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -331,13 +403,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cO7r4kYY3_aA"
+        "id": "cO7r4kYY3_aA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "47a3228d-5f06-43cc-ce5c-d1355180dc0d"
       },
       "source": [
-        ""
+        "def validate():\n",
+        "  number = int(input(\"Input number between 1 and 100 \"))\n",
+        "  if number < 1 or 100 < number:\n",
+        "    print(\"Number out of limits\")\n",
+        "  else:\n",
+        "    print(\"Your number was\" , number) \n",
+        "    \n",
+        "validate()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Input number between 1 and 100 66\n",
+            "Your number was 66\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -369,13 +461,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g2V-Ft_S8W6u"
+        "id": "g2V-Ft_S8W6u",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c0af47a7-56b9-4ec1-a0bb-1e3643a464f0"
       },
       "source": [
-        ""
+        "def report_pos_or_neg():\n",
+        "  number = int(input(\"Enter number\"))\n",
+        "  if number > 0:\n",
+        "    print( number, \" is a positive number\")\n",
+        "  elif number < 0:\n",
+        "    print( number, \" is a negative number\")\n",
+        "  else:\n",
+        "    print( number, \" is neither positive or negative\")\n",
+        "\n",
+        "report_pos_or_neg()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number0\n",
+            "0  is neither positive or negative\n"
+          ]
+        }
+      ]
     }
   ]
 }
